--- a/ui-design.html
+++ b/ui-design.html
@@ -98,30 +98,174 @@
       <div class="text-h2">Establish a visual language for seamless interaction</div>
     </div>
   </div>
-  <div class="section-new">
-    <div class="wrapper grid w-container">
-      <div class="w-layout-grid grid-services-4">
-        <div class="services-grid-content">
-          <div class="div-services-grid"><img src="images/Group 6451.svg" loading="lazy" alt="" class="icon-services"></div>
-          <div class="text-h5-grey">Controlled Environment Testing</div>
+  <div class="section-new-1">
+    <div class="wrapper-3 w-container">
+      <div data-duration-in="500" data-duration-out="500" class="w-tabs">
+        <div class="tabs-menu-3 w-tab-menu">
+          <a data-w-tab="1" class="tab w-inline-block w-tab-link">
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24.287" height="25.719"
+                viewbox="0 0 24.287 25.719">
+                <g id="Group_5738" data-name="Group 5738" transform="translate(-399.5 -1878.381)">
+                  <path id="Path_9457" data-name="Path 9457"
+                    d="M4734.6,11462.1v6.411l-7.87,13.03s-2.536,3.909,2.438,4.559c.148-.036,15.9,0,15.9,0s5.038.092,2.592-4.559c.075.031-8.112-13.03-8.112-13.03v-6.411"
+                    transform="translate(-4325.584 -9583)" fill="none" stroke="currentColor" stroke-width="2"></path>
+                  <path id="Path_9458" data-name="Path 9458" d="M0,0H7.908" transform="translate(407.54 1879.381)"
+                    fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"></path>
+                  <line id="Line_99" data-name="Line 99" x2="14.784" transform="translate(404.02 1894.166)" fill="none"
+                    stroke="currentColor" stroke-linecap="round" stroke-width="2"></line>
+                </g>
+              </svg></div>
+            <div class="tab-text">Controlled Environment <br>Testing</div>
+          </a>
+          <a data-w-tab="2" class="tab w-inline-block w-tab-link w--current">
+            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewbox="0 0 26 26">
+                <g id="Group_5739" data-name="Group 5739" transform="translate(-616 -1861)">
+                  <g id="Icon_feather-compass" data-name="Icon feather-compass" transform="translate(617 1862)">
+                    <path id="Path_9459" data-name="Path 9459" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
+                      transform="translate(-3 -3)" fill="none" stroke="currentColor" stroke-linecap="round"
+                      stroke-linejoin="round" stroke-width="2"></path>
+                    <path id="Path_9460" data-name="Path 9460" d="M20.12,11.64,18,18l-6.36,2.12,2.12-6.36Z"
+                      transform="translate(-3.88 -3.88)" fill="none" stroke="currentColor" stroke-linecap="round"
+                      stroke-linejoin="round" stroke-width="2"></path>
+                  </g>
+                </g>
+              </svg></div>
+            <div class="tab-text-1">Exploratory <br>Testing</div>
+          </a>
+          <a data-w-tab="3" class="tab w-inline-block w-tab-link">
+            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewbox="0 0 26 26">
+                <g id="Icon_feather-globe" data-name="Icon feather-globe" transform="translate(-2 -2)">
+                  <path id="Path_9461" data-name="Path 9461" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
+                    transform="translate(0 0)" fill="none" stroke="currentColor" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2"></path>
+                  <path id="Path_9462" data-name="Path 9462" d="M3,18H27" transform="translate(0 -3)" fill="none"
+                    stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                  <path id="Path_9463" data-name="Path 9463"
+                    d="M16,3a20.486,20.486,0,0,1,4,12,20.486,20.486,0,0,1-4,12,20.486,20.486,0,0,1-4-12A20.486,20.486,0,0,1,16,3Z"
+                    transform="translate(-1)" fill="none" stroke="currentColor" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2"></path>
+                </g>
+              </svg></div>
+            <div class="tab-text-1">Remote<br>Testing</div>
+          </a>
+          <a data-w-tab="4" class="tab w-inline-block w-tab-link">
+            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="18.8" height="26"
+                viewbox="0 0 18.8 26">
+                <path id="Icon_material-location-on" data-name="Icon material-location-on"
+                  d="M15.9,3a8.394,8.394,0,0,0-8.4,8.4c0,6.3,8.4,15.6,8.4,15.6s8.4-9.3,8.4-15.6A8.394,8.394,0,0,0,15.9,3Zm0,11.4a3,3,0,1,1,3-3A3,3,0,0,1,15.9,14.4Z"
+                  transform="translate(-6.5 -2)" fill="none" stroke="currentColor" stroke-linecap="round"
+                  stroke-linejoin="round" stroke-width="2"></path>
+              </svg></div>
+            <div class="tab-text-1">Contextual <br>testing</div>
+          </a>
         </div>
-        <div class="services-grid-content">
-          <div class="div-services-grid"><img src="images/Group 6458.svg" loading="lazy" alt="" class="icon-services"></div>
-          <div class="text-h5-grey">User interface<br>Evaluation</div>
-        </div>
-        <div class="services-grid-content">
-          <div class="div-services-grid"><img src="images/Group 6457.svg" loading="lazy" alt="" class="icon-services"></div>
-          <div class="text-h5-grey">Visual Design<br>System</div>
-        </div>
-        <div class="services-grid-content">
-          <div class="div-services-grid"><img src="images/Group 6456.svg" loading="lazy" alt="" class="icon-services"></div>
-          <div class="text-h5-grey">Branding &amp;<br>Identity</div>
+        <div class="w-tab-content">
+          <div data-w-tab="1" class="w-tab-pane">
+            <div class="w-layout-grid grid-2-column">
+              <div class="text-h2-2 black left">Controlled Environment testing</div>
+              <div>
+                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
+                  launched in the market by testing it with a sample population [small group of actual users].It helps the
+                  business to evaluates the product or website before it is launched in the market by testing it with a
+                  sample population [small group of actual users].</div>
+              </div>
+            </div>
+          </div>
+          <div data-w-tab="2" class="w-tab-pane w--tab-active">
+            <div class="w-layout-grid grid-2-column">
+              <div class="text-h2-2 black left">Exploratory testing</div>
+              <div>
+                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
+                  launched in the market by testing it with a sample population [small group of actual users].It helps the
+                  business to evaluates the product or website before it is launched in the market by testing it with a
+                  sample population [small group of actual users].</div>
+              </div>
+            </div>
+          </div>
+          <div data-w-tab="3" class="w-tab-pane">
+            <div class="w-layout-grid grid-2-column">
+              <div class="text-h2-2 black left">Remote Testing</div>
+              <div>
+                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
+                  launched in the market by testing it with a sample population [small group of actual users].It helps the
+                  business to evaluates the product or website before it is launched in the market by testing it with a
+                  sample population [small group of actual users].</div>
+              </div>
+            </div>
+          </div>
+          <div data-w-tab="4" class="w-tab-pane">
+            <div class="w-layout-grid grid-2-column">
+              <div class="text-h2-2 black left">Contextual testing</div>
+              <div>
+                <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
+                  launched in the market by testing it with a sample population [small group of actual users].It helps the
+                  business to evaluates the product or website before it is launched in the market by testing it with a
+                  sample population [small group of actual users].</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="w-layout-grid grid-2-column">
-        <div class="text-h2 black left">User Interface <br>Evaluation</div>
+    </div>
+  </div>
+  <div class="section-new-2">
+    <div class="wrapper-3 w-container">
+      <div class="w-layout-grid grid-services-4">
+        <a href="#Controlled-Environment-Testing" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Group-5738.svg" loading="lazy" alt="" class="icon-services">
+          </div>
+          <div class="text-h5-grey-2">Controlled Environment<br>Testing</div>
+        </a>
+        <a href="#Exploratory-testing" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Group-5771.svg" loading="lazy" alt="" class="icon-services">
+          </div>
+          <div class="text-h5-grey-2">Exploratory <br>Testing</div>
+        </a>
+        <a href="#Remote-testing" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Icon-feather-globe.svg" loading="lazy" alt=""
+              class="icon-services"></div>
+          <div class="text-h5-grey-2">Remote<br>Testing</div>
+        </a>
+        <a href="#Contextual-testing" class="services-grid-content w-inline-block">
+          <div class="div-services-grid"><img src="images/Icon-material-location-on.svg" loading="lazy" alt=""
+              class="icon-services"></div>
+          <div class="text-h5-grey-2">Contextual <br>testing</div>
+        </a>
+      </div>
+      <div id="Controlled-Environment-Testing" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">Controlled Environment testing</div>
         <div>
-          <div class="text-h3 black">Evaluating user interface design every once in a while will give us insights and ideas about enhancing design and business based on user’s feedback.</div>
+          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
+            the market by testing it with a sample population [small group of actual users].It helps the business to
+            evaluates the product or website before it is launched in the market by testing it with a sample population
+            [small group of actual users].</div>
+        </div>
+      </div>
+      <div id="Exploratory-testing" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">Exploratory testing</div>
+        <div>
+          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
+            the market by testing it with a sample population [small group of actual users].It helps the business to
+            evaluates the product or website before it is launched in the market by testing it with a sample population
+            [small group of actual users].</div>
+        </div>
+      </div>
+      <div id="Remote-testing" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">Remote testing</div>
+        <div>
+          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
+            the market by testing it with a sample population [small group of actual users].It helps the business to
+            evaluates the product or website before it is launched in the market by testing it with a sample population
+            [small group of actual users].</div>
+        </div>
+      </div>
+      <div id="Contextual-testing" class="w-layout-grid grid-2-column-2">
+        <div class="text-h2-2 black left">Contextual testing</div>
+        <div>
+          <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched in
+            the market by testing it with a sample population [small group of actual users].It helps the business to
+            evaluates the product or website before it is launched in the market by testing it with a sample population
+            [small group of actual users].</div>
         </div>
       </div>
     </div>
@@ -187,6 +331,7 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
+  <script src="js/consult.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
