--- a/automobile-usability.html
+++ b/automobile-usability.html
@@ -14,6 +14,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/consulting.css" rel="stylesheet" type="text/css">
   <link href="css/uxmint-consulting.css" rel="stylesheet" type="text/css">
+  <link href="css/animation.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -68,11 +69,11 @@
   <div class="section-15">
     <div class="container-11 w-container">
       <div class="w-layout-grid grid-24">
-        <div><img src="images/Group 6434.png" loading="lazy" alt="" class="image-7">
+        <div class="icon1"><img src="images/Group 6434.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3-child black">Testing Environment</div>
           <div class="text-h3-3 black">Vehicle was tested in Natural Environment (to the extent possible) in calm road and broad daylight condition; while other pedestrians/vehicles were passing by the testing vehicle.</div>
         </div>
-        <div><img src="images/sustainable.png" loading="lazy" alt="" class="image-7">
+        <div class="icon2"><img src="images/sustainable.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3-child black">Testing Equipments</div>
           <div class="text-h3-3 black">Vehicle was provided with the prototype installed. Prototype was simulated for different scenarios with various alerts “Visual”, “Audio” and “Haptics”.</div>
         </div>
@@ -150,7 +151,9 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f6b56e1763ff97ee6f130d9" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
+  <script src="js/animation.js"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173088309-1"></script>
