--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
   <div class="sectionhero">
-    <div class="wrapper hero w-container">
-      <div data-w-id="873bd21d-23ab-3955-3628-129486742977" style="-webkit-transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-accent-1">Holistic Design Service</div>
-      <div data-w-id="c327f906-b4ef-ae21-fc85-238a56cfd8cb" style="-webkit-transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75VH, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-h1">We Bring <br>Digital transformation <br>through Design</div>
+    <div class="wrapper1-2 hero w-container">
+      <div class="div-block-122">
+        <div class="text-hero">Holistic Design Studio</div>
+      </div>
+      <div class="div-block-123">
+        <div class="text-h1">We Bring <br>Digital Transformation <br>Through Design</div>
+      </div>
     </div>
   </div>
   <!-- <div class="section-video">
@@ -51,7 +55,7 @@
   </div> -->
   <div class="image-section">
    <div class="banner-animation">
-    <img src="images/HomePage picture.png" loading="lazy" sizes="100vw" alt="" class="image-11">
+    <img src="images/Mask Group 107@2x.jpg" loading="lazy" sizes="100vw" alt="" class="image-11">
   </div>
 </div>
   <div class="section-new black">
