--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,8 @@
                   <div class="form-element-1"><label for="name-9" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name-8" data-name="Name 8" placeholder="" id="name-8"></div>
                   <div class="form-element-1"><label for="name-9" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="name-6" data-name="Name 6" placeholder="" id="name-6"></div>
                   <div class="form-element-1"><label for="name-9" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="name-5" data-name="Name 5" placeholder="" id="name-5"></div>
-                  <div class="form-element-1"><label for="name-9" class="form-label">Businesss / Organisation</label><input type="text" class="text-field w-input" maxlength="256" name="name-4" data-name="Name 4" placeholder="" id="name-4"></div>
-                  <div class="form-element-1"><label for="name-9" class="form-label">Enter Enquiry here</label><input type="text" class="text-field w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="" id="name-2"></div>
+                  <div class="form-element"><a href="#" class="button-7 w-button">Attach Resume</a><input type="tel" class="text-field w-input" maxlength="256" name="name-5" data-name="Name 5" placeholder="" id="name-5"></div>
+                  <div class="form-element-1"><label for="name-9" class="form-label">Portfolio URL</label><input type="text" class="text-field w-input" maxlength="256" name="name-5" data-name="Name 5" placeholder="" id="name-5"></div>
                 </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button"></form>
               <div class="w-form-done">
                 <div>Thank you! Your submission has been received!</div>
