--- a/page-not-found.html
+++ b/page-not-found.html
@@ -21,22 +21,11 @@
 </head>
 <body>
   <div class="utility-page-wrap">
-    <div class="utility-page-content w-password-page w-form">
-      <form action="/.wf_auth" method="post" class="utility-page-form w-password-page"><img src="https://d3e54v103j8qbb.cloudfront.net/static/password-page-lock.832ca8e2c9.svg" alt="">
-        <h2>Protected Page</h2><input type="password" autofocus="true" maxlength="256" name="pass" placeholder="Enter your password" class="w-password-page w-input"><input type="submit" value="Submit" data-wait="Please wait..." class="w-password-page w-button">
-        <div class="w-password-page w-form-fail">
-          <div>Incorrect password. Please try again.</div>
-        </div>
-        <div style="display:none" class="w-password-page w-embed w-script"><input type="hidden" name="path" value="<%WF_FORM_VALUE_PATH%>"><input type="hidden" name="page" value="<%WF_FORM_VALUE_PAGE%>"></div>
-        <div style="display:none" class="w-password-page w-embed w-script">
-          <script type="application/javascript">(function _handlePasswordPageOnload() {
-	  if (/[?&]e=1(&|$)/.test(document.location.search)) {
-	    document.querySelector('.w-password-page.w-form-fail').style.display = 'block';
-	  }
-	})()</script>
-        </div>
-      </form>
-    </div>
+    <div class="utility-page-content w-form">
+      <h1 class="heading">404</h1>
+      <h2 class="heading-2">Page Not Found!</h2>
+      <div class="div-block-130">You seems to be trying to find this way to home</div>
+    </div><a href="index.html" class="button-8 w-button">Back to home</a>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/consulting.js" type="text/javascript"></script>
